tf_vpc_setup/vpc_setup.tf
 resource "aws_vpc" "sid_vpc" {
   cidr_block = "10.0.0.0/16"
   tags = {
     Name = "sid_vpc"
   }
 }
